<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >      
   
    <!-- HSV: Horizontal Scroll View -->
    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rendertex_text_instruction">
        
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/integral_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integral_button" />
            <Button
                android:id="@+id/fraction_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fraction_button" />
            <Button
                android:id="@+id/function_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function_button" />
            <Button
                android:id="@+id/sum_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum_button" />
            <Button
                android:id="@+id/product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_button" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_button" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_button" />
                        
		</LinearLayout>        

	</HorizontalScrollView>
	
    <TextView
        android:id="@+id/rendertex_text_instruction" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rendertex_go_button"
        android:text="@string/rendertex_text_instruction" />
    
    <EditText
       	android:id="@+id/rendertex_edit_text"
       	android:lines="2"
       	android:gravity="top|left"
       	android:inputType="textMultiLine"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/rendertex_go_button"
        android:layout_below="@+id/rendertex_text_instruction"
        android:layout_alignParentBottom="true"        
        android:hint="@string/rendertex_text_welcometext" />
    
	<Button
        android:id="@+id/rendertex_go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/rendertex_go_button"
        android:padding="20dp" />
	
 	<com.onoireszta.rendertex.MyWebView  
	    android:id="@+id/webView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@+id/horizontalScrollView" />
    
</RelativeLayout>
